--- a/README.Rmd
+++ b/README.Rmd
@@ -50,7 +50,7 @@ mat_pows(matrix(1:9, nrow = 3), 1:5)
 
 For more details, take a look at the package vignette.
 
-## Acknowledgements
+## Acknowledgments
 
 This package could not have been developed without the invaluable [devtools](https://cran.r-project.org/web/packages/devtools/index.html) package, which simplifies and automates the process of package development. 
 
